# project-django-mysql

./: Dockerfile  docker-compose.yml  manage.py  pyproject.toml
ts_start/: asgi.py  settings.py  urls.py  wsgi.py
