[tool.poetry]
name = "atividade_image"
version = "0.1.0"
description = ""
authors = ["Victor Hugo <victorblog410@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
asgiref = "3.3.4"
Django = "3.2.3"
flake8 = "3.9.2"
mccabe = "0.6.1"
mypy = "0.812"
mypy-extensions = "0.4.3"
pycodestyle = "2.7.0"
pyflakes = "2.3.1"
pytz = "2021.1"
sqlparse = "0.4.1"
typed-ast = "1.4.3"
typing-extensions = "3.10.0.0"
mysql-client = "^0.0.1"
PyMySQL = "^1.0.2"
mysqlclient = "^2.0.3"
dj-database-url = "^0.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
